# slurm-admin

./: .env.example  .gitignore  1137546.out  CLAUDE.md  DATABASE_INTEGRATION.md  DATABASE_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  database.py  pyproject.toml  requirements.txt  slm  slm-api  slm.py  test_slm.sh
docs/: DATABASE_INTEGRATION.md  DATABASE_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md
examples/: simple_job.sh  train_model.sh  unzip_benchmarks_slurm.sh
scripts/: query_jobs.py
slm/: __init__.py  cli.py  sdk.py
sql/: init_schema.sql
src/slurm_admin/: __init__.py  api_service.py  database.py  http_client.py  slm.py
tests/: test_slm.sh
