[project]
name = "slurm-admin"
version = "0.1.0"
description = "Slurm Lifecycle Monitor - A low-coupling monitoring solution for Slurm jobs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pymysql>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/slurm-admin"
Repository = "https://github.com/yourusername/slurm-admin"

[project.scripts]
slm = "slurm_admin.slm:main"
slm-api = "slurm_admin.api_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slurm_admin"]

[tool.uv]

